# FrankC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: frank.c  frank.h  frankArt.h  main.c  progInfo.h.in  tools.h
src/libFrank/: arrays.h  frank.c  frank.h  lists.h
